# jm-github-standards

./: .editorconfig  .gitattributes  .gitignore  .markdown-link-check.json  .markdownlint.json  .markdownlintignore  .prettierignore  .prettierrc.json  .vale.ini  .yamllint.yml  CHANGELOG.md  README.md  REUSE.toml  Taskfile.yml  biome.json  cspell.json  lefthook.yml  mkdocs.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  repo-metadata.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-documentation.yml  config.yml
.github/config/: .gitleaks.toml  .mega-linter.yml  .shellcheckrc  base.releaserc.json  eslint.megalinter.config.js  labeler.yml  labels.json  repolinter.json
.github/workflows/: maintenance.yml  release.yml  shared-label-sync.yml  shared-maintenance.yml  shared-release-generic.yml
docs/en/: index.md
